sidebar layout coming together, the rest still needs a lot of work

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,53 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: pink;
 }
 
 .container {
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 4px;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 3fr;
+  border: 1px solid black;
+  background-color: pink;
+}
+
+/* ******** Sidebar Section ******** */
+.sidebar {
+  display: grid;
+  grid-column: 1/2;
+  grid-row: 1/ 5;
+  justify-content: flex-start;
+  background-color: dodgerblue;
+  color: white;
+  text-align: left;
+  align-content: flex-start;
+}
+
+.header-logo {
+  font-size: 25px;
+  font-weight: 900;
+  padding: 15px;
+}
+
+ul {
+  padding: 20px;
+  text-align: left;
+}
+
+li,
+i {
+  padding-right: 15px;
 }
 
 li {
   list-style-type: none;
+  padding: 7px;
+  font-weight: 600;
+}
+
+/* ******** Main Content Section ******** */
+
+.my-projects {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
