--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@
 .container {
   text-align: center;
   display: grid;
-  grid-template: 1fr 1fr 1fr 1fr / 1fr 3fr;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 5fr;
   border: 1px solid black;
   background-color: pink;
 }
 
 /* ******** Sidebar Section ******** */
+
+/*  Sidebar text needs to be evened out and needs logo at top right to be finished. */
 .sidebar {
   display: grid;
   grid-column: 1/2;
@@ -30,7 +32,7 @@
 }
 
 ul {
-  padding: 20px;
+  padding: 25px;
   text-align: left;
 }
 
@@ -41,7 +43,7 @@ i {
 
 li {
   list-style-type: none;
-  padding: 7px;
+  padding: 10px;
   font-weight: 600;
 }
 
