--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 .container {
   text-align: center;
   display: grid;
-  grid-template: 1fr 1fr 1fr 1fr / 1fr 5fr;
+  grid-template: 1fr 5fr / 1fr 5fr;
   border: 1px solid black;
   background-color: pink;
 }
@@ -47,9 +47,50 @@ li {
   font-weight: 600;
 }
 
+/* ******** Header ******** */
+.header {
+  grid-row: 1 / 2;
+}
+
 /* ******** Main Content Section ******** */
 
-.my-projects {
+/* .main-section {
+  display: grid;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+} */
+
+.my-projects {
+  display: grid;
+  grid-template: 1fr 1fr 1fr / 1fr 1fr;
+}
+
+.main-section {
+  display: grid;
+  grid-template: 1fr / 1fr;
+}
+
+.project {
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+/* div.top-right {
+  display: grid;
+  grid-column: 3 / 4;
+}
+
+div.bottom-right {
+  display: grid;
+  grid-column: 3 / 4;
+} */
+
+/* cards that hold projects */
+.project,
+.top-right,
+.bottom-right {
+  border: 1px black solid;
+  background-color: white;
 }
