--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,8 @@ li {
 
 /* Need 2 columns and 3 rows for your projects, and a final column at the end with 2 rows for extra info */
 /* can be done following these examples: https://stackoverflow.com/questions/47614008/can-i-have-a-varying-number-of-columns-per-row-in-a-css-grid#:~:text=No%2C%20it's%20not%20possible%20to,any%20grid%20for%20that%20matter. */
+
+/* Make entire container of Main Content a grid */
+.container {
+  display: grid;
+}
