--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,43 @@ li {
 /* Make entire container of Main Content a grid */
 .my-projects {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.p1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.p2 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 5;
+}
+
+.p3 {
+  grid-column: 1 / 2;
+  grid-row: 5 / 7;
+}
+.p4 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+.p5 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 5;
+}
+.p6 {
+  grid-column: 2 / 3;
+  grid-row: 5 / 7;
+}
+
+.top-right {
+  grid-column: 3 / 4;
+  grid-row: 1 / 4;
+}
+
+.bottom-right {
+  grid-column: 3 / 4;
+  grid-row: 4 / 7;
 }
