--- a/styles.css
+++ b/styles.css
@@ -52,18 +52,14 @@ li {
   grid-row: 1 / 2;
 }
 
-/* ******************************** When restart on a fresh brain tomorrow, keep everything above this line ******************************** */
-
 /* ******** Main Content Section ******** */
-
-/* Need 2 columns and 3 rows for your projects, and a final column at the end with 2 rows for extra info */
-/* can be done following these examples: https://stackoverflow.com/questions/47614008/can-i-have-a-varying-number-of-columns-per-row-in-a-css-grid#:~:text=No%2C%20it's%20not%20possible%20to,any%20grid%20for%20that%20matter. */
 
 /* Make entire container of Main Content a grid */
 .my-projects {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 15px;
 }
 
 .p1 {
@@ -101,4 +97,8 @@ li {
 .bottom-right {
   grid-column: 3 / 4;
   grid-row: 4 / 7;
+}
+
+.project {
+  border: 1px solid black;
 }
