--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
   display: grid;
   grid-template: 1fr 5fr / 1fr 5fr;
   border: 1px solid black;
-  background-color: pink;
 }
 
 /* ******** Sidebar Section ******** */
@@ -49,7 +48,19 @@ li {
 
 /* ******** Header ******** */
 .header {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.top {
   grid-row: 1 / 2;
+}
+
+.search-btn {
+  width: 40px;
+  border: none;
+  background-color: white;
+  text-align: right;
 }
 
 /* ******** Main Content Section ******** */
@@ -60,6 +71,7 @@ li {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 15px;
+  background-color: lightgray;
 }
 
 .p1 {
