--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ li {
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 15px;
   background-color: lightgray;
+  padding: 30px;
 }
 
 .p1 {
@@ -134,7 +135,8 @@ li {
   grid-row: 5 / 7;
 }
 
-.top-right {
+.top-right,
+h3 {
   grid-column: 3 / 4;
   grid-row: 1 / 4;
 }
