--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,14 @@ li {
   justify-content: center;
 }
 
+/* Sizing logo image */
+
+.thumb {
+  width: 50px;
+  height: 50px;
+  padding-right: 15px;
+}
+
 /* ******** Main Content Section ******** */
 
 /* Make entire container of Main Content a grid */
