--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,12 @@ li {
   padding-right: 15px;
 }
 
+.thumb-below {
+  width: 50px;
+  height: 50px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+}
 /* ******** Main Content Section ******** */
 
 /* Make entire container of Main Content a grid */
