--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,8 @@ li {
 /* Sizing logo image */
 
 .thumb {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   padding-right: 15px;
 }
 
@@ -109,6 +109,14 @@ li {
   height: 50px;
   padding-bottom: 15px;
   padding-left: 30px;
+  padding-right: 15px;
+}
+
+/* bottom of title rows*/
+.bottom-left {
+  grid-row: 2/2;
+  display: flex;
+  align-items: center;
 }
 /* ******** Main Content Section ******** */
 
