--- a/styles.css
+++ b/styles.css
@@ -129,14 +129,15 @@ li {
 
 .top-buttons {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-right: 30px;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 button {
   border-radius: 15px;
-  padding: 10px;
+  padding: 15px;
 }
 
 /* ***************************** Main Content Section ***************************** */
