--- a/styles.css
+++ b/styles.css
@@ -135,9 +135,15 @@ li {
   gap: 20px;
 }
 
-button {
-  border-radius: 15px;
-  padding: 15px;
+.header-button-right {
+  border: 0;
+  border-radius: 100px;
+  min-height: 35px;
+  width: 100px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #fff;
+  background-color: #0284c7;
 }
 
 /* ***************************** Main Content Section ***************************** */
