--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@
   padding: 0;
 }
 
+/* entire page as a grid */
 .container {
   text-align: center;
   display: grid;
-  grid-template: 1fr 5fr / 1fr 5fr;
+  grid-template: 1fr 5fr / 1.4fr 5fr;
   border: 1px solid black;
 }
 
@@ -44,7 +45,7 @@ ul {
 
 li,
 i {
-  padding-right: 15px;
+  padding-right: 20px;
 }
 
 li {
