done everything, just add some titles in project section and fix announcement and trending section

--- a/styles.css
+++ b/styles.css
@@ -232,8 +232,13 @@ h3 {
   height: fit-content;
 }
 
+.proj-only {
+  background: linear-gradient(to right, orange 2%, white 2%);
+}
+
 .all-cards {
   background-color: white;
+
   display: flex;
   flex-direction: column;
   text-align: left;
