made boxes rounder

--- a/styles.css
+++ b/styles.css
@@ -228,8 +228,9 @@ h3 {
 }
 
 .project {
-  border: 1px solid black;
   height: fit-content;
+  border-radius: 5px;
+  box-shadow: black;
 }
 
 .proj-only {
@@ -243,6 +244,7 @@ h3 {
   flex-direction: column;
   text-align: left;
   padding: 25px;
+  border-radius: 5px;
 }
 
 .title {
