--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,7 @@ h3 {
   text-align: left;
   padding: 25px;
   border-radius: 5px;
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .title {
